customization - start of work